Added Requirements Engineering in the methodology chapter

--- a/abkuerzungen/acronyms.tex
+++ b/abkuerzungen/acronyms.tex
@@ -1,10 +1,12 @@
 
 \section*{\langde{Abkürzungsverzeichnis}\langen{List of Abbreviations}}
 
-\begin{acronym}[MVP]\itemsep0pt %der Parameter in Klammern sollte die längste Abkürzung sein. Damit wird der Abstand zwischen Abkürzung und Übersetzung festgelegt
+\begin{acronym}[IEEE]\itemsep0pt %der Parameter in Klammern sollte die längste Abkürzung sein. Damit wird der Abstand zwischen Abkürzung und Übersetzung festgelegt
   \acro{API}{Application Programming Interface}
   \acro{IaC}{Infrastructure-as-Code}
+  \acro{IEEE}{Institute of Electrical and Electronics Engineers}
   \acro{MVP}{Minimum Viable Product}
   \acro{NLP}{Natural Language Processing}
   \acro{NLU}{Natural Language Understanding}
+  \acro{RE}{Requirements Engineering}
 \end{acronym}
