--- a/literatur/literatur.bib
+++ b/literatur/literatur.bib
@@ -251,6 +251,20 @@
   file = {/Users/A200017936/Zotero/storage/I5ADHGTU/Shrivastava - Design and Implementation of Chatbot using Python.pdf}
 }
 
+@book{sommervilleRequirementsEngineeringGood1997,
+  title = {Requirements {{Engineering}}: {{A Good Practice Guide}}},
+  shorttitle = {Requirements {{Engineering}}},
+  author = {Sommerville, Ian and Sawyer, Pete},
+  date = {1997-03},
+  edition = {1},
+  publisher = {John Wiley \& Sons, Inc.},
+  location = {USA},
+  abstract = {From the Publisher: Requirements engineering is the process of discovering, documenting and managing the requirements for a computer-based system. The goal of requirements engineering is to produce a set of system requirements which, as far as possible, is complete, consistent, relevant and reflects what the customer actually wants. Although this ideal is probably unattainable, the use of a systematic approach based on engineering principles leads to better requirements than the informal approach which is still commonly used. This book presents a set of guidelines which reflect the best practice in requirements engineering. Based on the authors' experience in research and in software and systems development, these guidelines explain in an easy-to-understand way how you can improve your requirements engineering processes. The guidelines are applicable for any type of application and, in general, apply to both systems and software engineering.},
+  isbn = {978-0-471-97444-4},
+  pagetotal = {404},
+  file = {/Users/A200017936/Zotero/storage/ZGD4FH2L/Sommerville und Sawyer - 1997 - Requirements Engineering A Good Practice Guide.pdf}
+}
+
 @article{syedQuestionAnsweringChatbot2021,
   title = {Question {{Answering Chatbot}} for {{Troubleshooting Queries}} Based on {{Transfer Learning}}},
   author = {Syed, Zeeshan Haque and Trabelsi, Asma and Helbert, Emmanuel and Bailleau, Vincent and Muths, Christian},
