Added one missing cite

--- a/kapitel/kapitel_2/kapitel_2.tex
+++ b/kapitel/kapitel_2/kapitel_2.tex
@@ -200,8 +200,8 @@ effective communication, alignment, and feedback across all parties.
 The foundation, the Requirements Documentation, began with a structured Word document containing a requirements table,
 which served as the central repository for capturing, organizing, and updating requirements. This document ensured
 systematic traceability and provided a consistent foundation for ongoing modifications as new insights emerged. The
-example from \ac{IEEE}, mentioned in Sommerville's book, is not used, because for a Prototype it is to much. A simpler 
-version was created. 
+example from \ac{IEEE}, mentioned in Sommerville's book, is not used, because for a Prototype it is to much.
+\autocite[cf.][p.42--43]{sommervilleRequirementsEngineeringGood1997} simpler version was created.
 
 During Requirements Elicitation, workshops with domain experts were conducted to deepen understanding of the procurement
 process and to capture core requirements. These sessions were complemented by ad-hoc meetings throughout development to
