--- a/kapitel/kapitel_2/kapitel_2.tex
+++ b/kapitel/kapitel_2/kapitel_2.tex
@@ -201,7 +201,7 @@ The foundation, the Requirements Documentation, began with a structured Word doc
 which served as the central repository for capturing, organizing, and updating requirements. This document ensured
 systematic traceability and provided a consistent foundation for ongoing modifications as new insights emerged. The
 example from \ac{IEEE}, mentioned in Sommerville's book, is not used, because for a Prototype it is to much.
-\autocite[cf.][p.42--43]{sommervilleRequirementsEngineeringGood1997} simpler version was created.
+\autocite[cf.][p.42--43]{sommervilleRequirementsEngineeringGood1997}A simpler version was created.
 
 During Requirements Elicitation, workshops with domain experts were conducted to deepen understanding of the procurement
 process and to capture core requirements. These sessions were complemented by ad-hoc meetings throughout development to
