Fixed wrong headline

--- a/kapitel/kapitel_2/kapitel_2.tex
+++ b/kapitel/kapitel_2/kapitel_2.tex
@@ -202,7 +202,7 @@ environment for reviewing and integrating changes. \autocite[cf.][p.236]{sommerv
 This emphasis on policies over tools supported the dynamic nature of the prototype’s development while preserving
 project coherence and stakeholder alignment.
 
-\subsubsection{Application of \acs{NLP} in the Project}
+\subsubsection{Application of Requirements Engineering in the Project}
 
 The application of \acs{RE} in this project adhered to an iterative and collaborative methodology,
 incorporating structured documentation, continuous stakeholder engagement, and interactive design tools to refine and
