Changed Project Structure

--- a/kapitel/00_relevance/00_relevance.tex
+++ b/kapitel/00_relevance/00_relevance.tex
@@ -7,7 +7,7 @@ Kleiner Reminder für mich in Bezug auf die Dinge, die wir bei der Thesis beacht
 -Vorlage für die Thesis.
 
 \subsection{Structure of the Paper}\label{subsec:structure-of-the-paper}
-Kapitel~\ref{fundamentals}
+Kapitel~\ref{sec:fundamentals}
 enthält die Inhalte des Thesis-Days und alles, was zum inhaltlichen erstellen der Thesis relevant sein könnte.
 In
 Kapitel~\ref{sec:methodology}~\nameref{sec:methodology} findet ihr wichtige Anmerkungen zu \LaTeX{}
